--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,4 +11,9 @@ code {
     monospace;
 }
 
-
+@font-face {
+  font-family: 'DSDIGI';
+  src: url('./Fonts/DSDIGI.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
